--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <img src="https://i.imgur.com/NzY7KwM.png" alt="ZuckerCat Logo">
+        <img src="C43CDEE2-FB06-4819-815D-48CA27CC50C7.png" alt="ZuckerCat Logo">
         <h1>ZuckerCat (ZCAT)</h1>
         <p>The AI Meme Overlord Has Arrived</p>
     </header>
