--- a/index.html
+++ b/index.html
@@ -58,7 +58,30 @@
     <div class="container">
         <div class="section">
             <h2>About ZuckerCat</h2>
-            <p>ZuckerCat is the ultimate fusion of feline cuteness and AI overlord ambition. Born in the meme metaverse, ZCAT is here to dominate your timeline with purrfection and precision. Powered by Solana, fueled by memes.</p>
+            <p>🧠 What is ZuckerCat?
+
+Meet ZuckerCat – the AI-fueled feline overlord of the metaverse. Half cat, half Zuckerberg, 100% ready to take over your meme bag. With AR goggles and an appetite for blockchain chaos, ZuckerCat doesn’t just purr… he programs.🚀 Why Buy ZCAT?
+	•	🐱 It’s a cat. It’s a cyborg. It’s unstoppable.
+	•	🌐 Powered by Solana for lightning-fast meme action
+	•	🤖 Born to dominate the metaverse – or at least your watchlist
+	•	🔥 100% community-fueled: no VCs, no fake promises, just chaos
+	•	🎁 Future meme utilities incoming (NFTs, games, who knows…)
+
+⸻
+
+💬 Our Manifesto
+
+“ZuckerCat is not just a meme… it’s a movement.
+A declaration of independence from boring tokens and corporate cringe.
+We came to meme. We came to purr. We came to pump.”
+
+⸻
+
+⚠️ Disclaimer
+
+This token has zero utility, zero roadmap, and zero shame.
+If you’re looking for serious projects, this ain’t it.
+If you’re looking for a cult of internet weirdos who meme to Valhalla – welcome home..</p>
         </div>
         <div class="section">
             <h2>Token Info</h2>
