--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ If you’re looking for a cult of internet weirdos who meme to Valhalla – welc
         </div>
         <div class="section">
             <h2>Join the Community</h2>
-            <p>Follow us on <a href="#" target="_blank">Twitter</a> and join the <a href="#" target="_blank">Telegram</a> to become a true ZuckerCultist.</p>
+            <p>Follow us to become a true ZuckerCultist.</p>
         </div>
     </div>
     <footer>
