--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ If you’re looking for a cult of internet weirdos who meme to Valhalla – welc
                 <li><strong>Total Supply:</strong> 420,690,000,000</li>
                 <li><strong>Decimals:</strong> 9</li>
                 <li><strong>Network:</strong> Solana</li>
+		    <li><strong>Contract address:</strong> H6GZ8d86kNVHCJ6MmuDuC1F6zhuSzHe84RmKzdV6ccnp </li>
             </ul>
         </div>
         <div class="section">
