--- a/index.html
+++ b/index.html
@@ -93,7 +93,19 @@ If you’re looking for a cult of internet weirdos who meme to Valhalla – welc
 		    <li><strong>Contract address:</strong> H6GZ8d86kNVHCJ6MmuDuC1F6zhuSzHe84RmKzdV6ccnp </li>
             </ul>
         </div>
-        <div class="section">
+
+
+	       <div class="section">
+            <h2>ZuckerCat Roadmap 😼</h2>
+            <ul>
+                <li><strong>Phase 1: The Awakening</strong> – Website launch, token live, memes go viral, socials created</li>
+                <li><strong>Phase 2: Meme Domination</strong> – Jupiter DEX listing, giveaways, 1,000 holders, DEXTools trending</li>
+                <li><strong>Phase 3: The Rise of ZuckerCat</strong> – CoinGecko/CMC submission, NFT drop, meme contests, influencer raids</li>
+                <li><strong>Phase 4: Purrfect Expansion</strong> – Merch, partnerships, staking/farming pools, Telegram bot</li>
+                <li><strong>Phase 5: AI Overlord Era</strong> – AI meme generator, ZuckerChat AI catbot, ZCAT to the moon</li>
+       <ul>
+		    
+		    <div class="section">
             <h2>How to Buy</h2>
             <p>Get your Phantom or Solflare Wallet ready, head to <a href="https://jup.ag" target="_blank">Jupiter DEX</a>, and search for <strong>ZCAT</strong>. Swap and join the purrty.</p>
         </div>
