--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ If you’re looking for a cult of internet weirdos who meme to Valhalla – welc
 	</div>
 		    <div class="section">
             <h2>How to Buy</h2>
-            <p>Get your Phantom or Solflare Wallet ready, head to <a href="https://jup.ag" target="_blank">Jupiter DEX</a>, and search for <strong>ZCAT</strong>. Swap and join the purrty.</p>
+            <p>Get your Phantom or Solflare Wallet ready, head to <a href="https://jup.ag/swap/SOL-H6GZ8d86kNVHCJ6MmuDuC1F6zhuSzHe84RmKzdV6ccnp" target="_blank">Jupiter DEX</a>, and search for <strong>ZCAT</strong>. Swap and join the purrty.</p>
         </div>
         <div class="section">
             <h2>Join the Community</h2>
